HelloUltraviolet/Fixtures/RejectedSource/Parallelism/BarrierOutsideGpuContext/Expected.uv
//! Expected diagnostic metadata for the BarrierOutsideGpuContext rejected-source specimen.

expectedDiagnostic("E-CON-0156", "rule.20.Barrier-Outside-Err")
